--- a/styles.css
+++ b/styles.css
@@ -114,4 +114,16 @@ table {
     cursor: pointer;
   }
 
- 
+  @media (max-width: 28.75em) {
+    #restart {
+      margin-top: 50px;
+    }
+
+    #message {
+      font-size: 16px;
+    }
+
+    .title {
+      font-size: 30px;
+    }
+  }
